re-aligned speak button to the top right and fixed styling to match each page

--- a/appDock/app/pages/home/home.scss
+++ b/appDock/app/pages/home/home.scss
@@ -7,7 +7,9 @@ $talk: gold;
 &::-webkit-scrollbar {
     display: none;
 }
-
+.rightAlign{
+  
+}
 .talk{
   color: $talk;
 }
