--- a/appDock/app/pages/tutorial/tutorial.scss
+++ b/appDock/app/pages/tutorial/tutorial.scss
@@ -46,5 +46,5 @@ $talk: gold;
 }
 
 .pic{
-  height:12vh;
+  height:35vh;
 }
